--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.0.0",
+    "csstyle": "^1.5.0",
+    "font-awesome": "^4.4.0",
     "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "susy": "^2.2.6"
   }
 }
