add breakpoint & custom-functions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
+    "breakpoint-sass": "^2.6.1",
     "csstyle": "^1.5.0",
     "font-awesome": "^4.4.0",
     "laravel-elixir": "^3.0.0",
