--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.0.0",
     "breakpoint-sass": "^2.6.1",
     "csstyle": "^1.5.0",
     "font-awesome": "^4.4.0",
     "laravel-elixir": "^3.0.0",
+    "normalize.css": "^3.0.3",
     "susy": "^2.2.6"
   }
 }
