--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "laravel-elixir": "^3.0.0",
     "nib": "^1.1.0",
     "normalize.css": "^3.0.3",
+    "poststylus": "^0.2.1",
     "susy": "^2.2.6"
   }
 }
